--- a/alert/templates/alert.yaml
+++ b/alert/templates/alert.yaml
@@ -6,28 +6,35 @@ metadata:
   labels:
     operator.synopsys.com/group-id: "Alert"
     app: alert
-    name: {{ .Values.instancename }}
-  name: {{ .Values.instancename }}-alert
-  namespace: {{ .Values.namespace }}
+    name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-alert
+  namespace: {{ .Release.Namespace }}
 spec:
   replicas: 1
   selector:
     app: alert
-    name: {{ .Values.instancename }}
+    name: {{ .Release.Name }}
   template:
     metadata:
       labels:
         app: alert
-        name: {{ .Values.instancename }}
-      name: {{ .Values.instancename }}-alert
+        name: {{ .Release.Name }}
+      name: {{ .Release.Name }}-alert
     spec:
       containers:
+        {{- if .Values.enableCertificateSecret }}
+        - env:
+          - name: RUN_SECRETS_DIR
+            valueFrom:
+              fieldRef:
+                 fieldPath: metadata.name
+        {{- end }}
         - envFrom:
             - configMapRef:
-                name: {{ .Values.instancename }}-blackduck-alert-config
+                name: {{ .Release.Name }}-blackduck-alert-config
             - secretRef:
-                name: {{ .Values.instancename }}-alert-secret
-          image: {{ .Values.alertimage }}
+                name: {{ .Release.Name }}-alert-secret
+          image: {{ .Values.alert.image }}
           imagePullPolicy: Always
           livenessProbe:
             exec:
@@ -44,16 +51,52 @@ spec:
               protocol: TCP
           resources:
             limits:
-              memory: {{ .Values.alertmem }}
+              memory: {{ .Values.alert.limitMemory }}
             requests:
-              memory: {{ .Values.alertmem }}
+              memory: {{ .Values.alert.requestMemory }}
           volumeMounts:
-            - mountPath: /opt/blackduck/alert/alert-config
-              name: dir-alert
+          - mountPath: /opt/blackduck/alert/alert-config
+            name: dir-alert
+          {{- if .Values.enableCertificateSecret }}
+          - mountPath: /tmp/secrets/WEBSERVER_CUSTOM_CERT_FILE
+            name: certificate
+            subPath: WEBSERVER_CUSTOM_CERT_FILE
+          - mountPath: /tmp/secrets/WEBSERVER_CUSTOM_KEY_FILE
+            name: certificate
+            subPath: WEBSERVER_CUSTOM_KEY_FILE
+          - mountPath: /tmp/secrets/cacerts
+            name: certificate
+            subPath: cacerts
+          {{- end }}
       dnsPolicy: ClusterFirst
+      {{- with .Values.alert.nodeSelector }}
+      nodeSelector:
+      {{ toYaml . | indent 2 }}
+      {{- end }}
+      {{- with .Values.alert.affinity }}
+      affinity:
+      {{ toYaml . | indent 2 }}
+      {{- end }}
+      {{- with .Values.alert.tolerations }}
+      tolerations:
+      {{ toYaml . | indent 2 }}
+      {{- end }}
       volumes:
+      {{- if .Values.enablePersistentStorage }}
+      - name: dir-alert
+        persistentVolumeClaim:
+          claimName: {{ .Release.Name }}-alert-pvc
+      {{- else }}
         - emptyDir: {}
           name: dir-alert
+      {{- end }}
+      {{- if .Values.enableCertificateSecret }}
+      - name: certificate
+        secret:
+          defaultMode: 292
+          secretName: {{ .Release.Name }}-alert-certificate
+      {{- end }}
+      
 ---
 
 apiVersion: v1
@@ -64,9 +107,9 @@ metadata:
   labels:
     operator.synopsys.com/group-id: "Alert"
     app: alert
-    name: {{ .Values.instancename }}
-  name: {{ .Values.instancename }}-alert
-  namespace: {{ .Values.namespace }}
+    name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-alert
+  namespace: {{ .Release.Namespace }}
 spec:
   ports:
     - name: port-8443
@@ -75,45 +118,67 @@ spec:
       targetPort: 8443
   selector:
     app: alert
-    name: {{ .Values.instancename }}
+    name: {{ .Release.Name }}
   type: ClusterIP
 ---
 
 apiVersion: v1
 kind: ConfigMap
 data:
-  ALERT_SERVER_PORT: "8443"
-  PUBLIC_HUB_WEBSERVER_HOST: localhost
-  PUBLIC_HUB_WEBSERVER_PORT: "443"
+  {{- if .Values.enableStandalone }}
+  HUB_CFSSL_HOST: {{ .Release.Name }}-alert-cfssl
+  {{- end }}
+  {{- range $key, $val := .Values.environs}}
+  {{ $key }}: {{ $val | quote }}
+  {{- end }}
 metadata:
   annotations:
     operator.synopsys.com/group-dependencies: ""
   labels:
     operator.synopsys.com/group-id: "ConfigMap"
     app: alert
-    name: {{ .Values.instancename }}
-  name: {{ .Values.instancename }}-blackduck-alert-config
-  namespace: {{ .Values.namespace }}
+    name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-blackduck-alert-config
+  namespace: {{ .Release.Namespace }}
 ---
 
 apiVersion: v1
 kind: Secret
 data:
-  ALERT_ENCRYPTION_GLOBAL_SALT: ""
-  ALERT_ENCRYPTION_PASSWORD: ""
+  {{- range $key, $val := .Values.secrets }}
+  {{ $key }}: {{ $val }}
+  {{- end }}
 metadata:
   annotations:
     operator.synopsys.com/group-dependencies: "ConfigMap"
   labels:
     operator.synopsys.com/group-id: "AlertSecret"
     app: alert
-    name: {{ .Values.instancename }}
-  name: {{ .Values.instancename }}-alert-secret
-  namespace: {{ .Values.namespace }}
+    name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-alert-secret
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 ---
 
-{{ if eq .Values.persistentstorage "True" -}}
+{{ if .Values.enableCertificateSecret -}}
+apiVersion: v1
+data:
+  WEBSERVER_CUSTOM_CERT_FILE: {{ .Values.javaKeystore }}
+  WEBSERVER_CUSTOM_KEY_FILE: {{ .Values.certificate }}
+  cacerts: {{ .Values.certificateKey }}
+kind: Secret
+metadata:
+  labels:
+    app: alert
+    component: alert
+    name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-alert-certificate
+  namespace: {{ .Release.Namespace }}
+type: Opaque
+---
+{{- end }}
+
+{{ if .Values.enablePersistentStorage -}}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -122,44 +187,22 @@ metadata:
   labels:
     operator.synopsys.com/group-id: "AlertPvc"
     app: alert
-    name: {{ .Values.instancename }}
-  name: {{ .Values.instancename }}-alert-pvc
-  namespace: {{ .Values.namespace }}
+    name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-alert-pvc
+  namespace: {{ .Release.Namespace }}
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.pvcsize }}
-{{ if .Values.storageclassname }}
-  storageClassName: {{ .Values.storageclassname }}
+      storage: {{ .Values.pvcSize }}
+{{ if .Values.storageClassName }}
+  storageClassName: {{ .Values.storageClassName }}
 {{ end -}}
 ---
 {{- end }}
 
-{{ if eq .Values.exposeui "True" -}}
-{{- if eq .Values.openshift "True" -}}
-apiVersion: route.openshift.io/v1
-kind: Route
-metadata:
-  labels:
-    app: alert
-    component: route
-    name: {{ .Values.instancename }}
-  name: {{ .Values.instancename }}-alert
-  namespace: {{ .Values.namespace }}
-spec:
-  port:
-    targetPort: port-8443
-  tls:
-    termination: passthrough
-  to:
-    kind: Service
-    name: {{ .Values.instancename }}-alert
-    weight: 100
-  wildcardPolicy: None
----
-{{- else -}}
+{{ if .Values.exposeui -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -168,9 +211,9 @@ metadata:
   labels:
     operator.synopsys.com/group-id: "Alert"
     app: alert
-    name: {{ .Values.instancename }}
-  name: {{ .Values.instancename }}-alert
-  namespace: {{ .Values.namespace }}
+    name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-alert
+  namespace: {{ .Release.Namespace }}
 spec:
   ports:
     - name: port-8443
@@ -179,8 +222,7 @@ spec:
       targetPort: 8443
   selector:
     app: alert
-    name: {{ .Values.instancename }}
-  type: {{ .Values.exposedservicetype }}
+    name: {{ .Release.Name }}
+  type: {{ .Values.exposeui.exposedServiceType }}
 ---
-{{ end }}
 {{- end }}
